--- a/index.html
+++ b/index.html
@@ -10,11 +10,22 @@
         <main>
             <h2>Ciao Federica! <span style="font-size: 30px">&#128075;</span></h2>
             <p>In questa pagina puoi creare e gestire facilmente una to-do list per organizzare al meglio le tue attività quotidiane!</p>
-            <button class="addListItem">+</button>
-            <div class="container">
+            <button id="addListItem">+</button>
+            <div id="container">
                 <div class="Item">
-                    <input type="checkbox" id="task1" name="task1" value="ok" class="checkbox" />
-                    <label for="vehicle1"> programmare</label>
+                    <input type="checkbox" id="task" value="ok" class="checkbox" />
+                    <label for="task"> programmare</label>
+                </div>
+            </div>
+            <div class="modalecontainer">
+                <div class="modale">
+                    <form>
+                        <label for="titolo">Titolo</label>
+                        <input id="titolo" type="text" placeholder="Titolo" required /> <br />
+                        <label for="task">Descrizione Task</label>
+                        <input id="task" type="text" placeholder="Descrizione task" required /> <br />
+                        <button class="button" type="submit">Invia</button>
+                    </form>
                 </div>
             </div>
         </main>
