--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <div class="modalecontainer">
                 <div class="modale">
                     <form>
-                        <label for="titolo">Titolo</label>
+                        <label for="titolo">Titolo</label> <br />
                         <input id="titolo" type="text" placeholder="Titolo" required /> <br />
-                        <label for="task">Descrizione Task</label>
+                        <label for="task">Descrizione Task</label> <br />
                         <input id="task" type="text" placeholder="Descrizione task" required /> <br />
                         <button class="button" type="submit">Invia</button>
                     </form>
