--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
             <p>In questa pagina puoi creare e gestire facilmente una to-do list per organizzare al meglio le tue attività quotidiane!</p>
             <button id="addListItem">+</button>
             <div id="container">
-                <div class="Item">
+                <!--    <div class="Item">
                     <input type="checkbox" id="task" value="ok" class="checkbox" />
                     <label for="task"> programmare</label>
-                </div>
+                </div> -->
             </div>
             <div class="modalecontainer">
                 <div class="modale">
