close, trash ok

--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
             <div class="modalecontainer">
                 <div class="modale">
                     <form>
-                        <label for="titolo">Titolo</label> <br />
-                        <input id="titolo" type="text" placeholder="Titolo" required /> <br />
-                        <label for="task">Descrizione Task</label> <br />
-                        <input id="task" type="text" placeholder="Descrizione task" required /> <br />
+                        <i class="fa-solid fa-xmark"></i>
+                        <label for="titolo">Titolo</label>
+                        <input id="titolo" type="text" placeholder="Titolo" required />
+                        <label for="task">Descrizione Task</label>
+                        <input id="task" type="text" placeholder="Descrizione task" required />
                         <button class="button" type="submit">Invia</button>
                     </form>
                 </div>
